# braintumor

./: .clang-format  .gitignore  CMakeLists.txt  rendergraph.md
example/: CMakeLists.txt
example/src/: main.cpp
res/shaders/: main.vert  main.vert.1
src/neuron/: base.hpp  interface.hpp  neuron.cpp  neuron.hpp
src/neuron/os/: window.cpp  window.hpp
src/neuron/render/: display_system.cpp  display_system.hpp  graphics_pipeline.cpp  graphics_pipeline.hpp  pipeline_layout.cpp  pipeline_layout.hpp  simple_render_pass.cpp  simple_render_pass.hpp
